--- a/config/eslint-config/package.json
+++ b/config/eslint-config/package.json
@@ -15,7 +15,7 @@
   "prettier": "@hellogio/prettier",
   "eslintConfig": {
     "extends": [
-      "library.js"
+      "./library.js"
     ]
   }
 }
