--- a/config/typescript-config/package.json
+++ b/config/typescript-config/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "@hellogio/typescript-config",
+  "name": "@hellogio/tsconfig",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "files": [
+    "library.json",
+    "nextjs.json"
+  ]
 }
