--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,9 +28,9 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.0.0",
-    "@hellogio/eslint-config": "workspace:*",
-    "@hellogio/prettier": "workspace:*",
-    "@hellogio/tsconfig": "workspace:*",
+    "@nmuro/eslint-config": "workspace:*",
+    "@nmuro/prettier": "workspace:*",
+    "@nmuro/tsconfig": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -39,10 +39,10 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
-  "prettier": "@hellogio/prettier",
+  "prettier": "@nmuro/prettier",
   "eslintConfig": {
     "extends": [
-      "@hellogio/eslint-config/next"
+      "@nmuro/eslint-config/next"
     ]
   }
 }
