--- a/config/eslint-config/package.json
+++ b/config/eslint-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hellogio/eslint-config",
+  "name": "@nmuro/eslint-config",
   "version": "0.0.0",
   "private": true,
   "files": [
@@ -10,9 +10,9 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "@hellogio/prettier": "workspace:*"
+    "@nmuro/prettier": "workspace:*"
   },
-  "prettier": "@hellogio/prettier",
+  "prettier": "@nmuro/prettier",
   "eslintConfig": {
     "extends": [
       "./library.js"
