--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,9 +29,11 @@
     "lucide-react": "^0.438.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.0.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.2",
