--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
@@ -18,6 +20,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.54.1",
     "@tiptap/react": "^2.6.6",
     "@tiptap/starter-kit": "^2.6.6",
@@ -25,6 +28,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "framer-motion": "^11.5.2",
+    "html-react-parser": "^5.1.18",
     "ky": "^1.7.2",
     "lucide-react": "^0.438.0",
     "mini-svg-data-uri": "^1.4.4",
